--- a/seminario-backend-rust/docker-compose.yml
+++ b/seminario-backend-rust/docker-compose.yml
@@ -11,20 +11,31 @@ services:
       POSTGRES_DB: campus_virtual
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./scripts:/docker-entrypoint-initdb.d
+      - ./scripts:/scripts-source
+      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d campus_virtual && psql -U admin -d campus_virtual -c \"SELECT COUNT(*) FROM pg_proc WHERE proname = 'get_all_users';\" | grep -q 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   rust_api:
     build: .
     container_name: rust_backend
-    restart: always
+    restart: on-failure
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       DATABASE_URL: postgres://admin:admin123@db:5432/campus_virtual
+      RUST_LOG: debug
+      RUST_BACKTRACE: 1
     ports:
       - "8080:8080"
 
 volumes:
   postgres_data:
+    name: campus_virtual_db_data
