--- a/seminario-backend-rust/Cargo.toml
+++ b/seminario-backend-rust/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"             # Framework web
+prometheus = "0.13"         # Para recolectar las metricas
+actix-web-prom = "0.9.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
 dotenvy = "0.15"            # Cargar variables de entorno desde .env
 tokio = { version = "1", features = ["full"] } # Requerido para async
-sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
+sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
 tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-serde_json-1"] }
 deadpool-postgres = "0.14.1" # Pool de conexiones
 serde = { version = "1", features = ["derive"] } # Serialización/Deserialización JSON
