--- a/seminario-backend-rust/docker-compose.yml
+++ b/seminario-backend-rust/docker-compose.yml
@@ -36,6 +36,35 @@ services:
     ports:
       - "8080:8080"
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+
+  k6:
+    image: grafana/k6
+    container_name: k6
+    volumes:
+      - ./tests:/tests
+    entrypoint: ["k6"]
+    command: ["run", "/tests/test_script.js"]
+    depends_on:
+      - rust_api
+
 volumes:
   postgres_data:
     name: campus_virtual_db_data
