--- a/seminario-backend-rust/prometheus.yml
+++ b/seminario-backend-rust/prometheus.yml
@@ -5,3 +5,8 @@ scrape_configs:
   - job_name: "rust_api"
     static_configs:
       - targets: ["rust_api:8080"]
+
+  - job_name: "pushgateway"
+    honor_labels: true
+    static_configs:
+      - targets: ["pushgateway:9091"]
