--- a/seminario-backend-rust/docker-compose.yml
+++ b/seminario-backend-rust/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+    command: ["bash", "/docker-entrypoint-initdb.d/init-db.sh"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U admin -d campus_virtual && psql -U admin -d campus_virtual -c \"SELECT COUNT(*) FROM pg_proc WHERE proname = 'get_all_users';\" | grep -q 1"]
       interval: 10s
