cambios en creacion de los scripts de la base de datos

--- a/seminario-backend-rust/Dockerfile
+++ b/seminario-backend-rust/Dockerfile
@@ -12,10 +12,6 @@ COPY . .
 # Compilamos el proyecto en modo release
 RUN cargo build --release
 
-# Verificar que el binario existe y es ejecutable
-RUN ls -la /app/target/release/
-RUN chmod +x /app/target/release/seminario-backend-rust
-
 # Usamos una imagen más ligera para ejecutar
 FROM debian:bullseye
 
@@ -26,27 +22,33 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     netcat \
     && rm -rf /var/lib/apt/lists/*
 
-# Definimos el directorio de trabajo
 WORKDIR /app
 
 # Copiamos el binario compilado
 COPY --from=builder /app/target/release/seminario-backend-rust .
 
-# Aseguramos que el binario tenga permisos de ejecución
-RUN chmod +x /app/seminario-backend-rust
-
-# Creamos un script de inicio simple pero efectivo
+# Script de espera mejorado
 RUN echo '#!/bin/bash\n\
-    echo "🔍 Verificando conexión a PostgreSQL..."\n\
-    nc -z db 5432 || { echo "❌ No se puede conectar a PostgreSQL"; exit 1; }\n\
-    echo "✅ Conexión a PostgreSQL verificada"\n\
-    echo "DATABASE_URL=$DATABASE_URL"\n\
-    echo "🚀 Iniciando aplicación..."\n\
-    exec /app/seminario-backend-rust\n\
-    ' > /app/start.sh && chmod +x /app/start.sh
+set -e\n\
+\n\
+echo "🔍 Esperando a PostgreSQL..."\n\
+until PGPASSWORD=$DB_PASSWORD psql -h "db" -U "$DB_USER" -d "$DB_NAME" -c "SELECT 1" > /dev/null 2>&1; do\n\
+  echo "⏳ PostgreSQL no está disponible aún - esperando..."\n\
+  sleep 1\n\
+done\n\
+\n\
+echo "✅ PostgreSQL está listo"\n\
+\n\
+# Ejecutar migraciones si es necesario\n\
+if [ "$APP_ENV" = "development" ]; then\n\
+  echo "🧹 Modo desarrollo: verificando estado de la base de datos..."\n\
+  PGPASSWORD=$DB_PASSWORD psql -h "db" -U "$DB_USER" -d "$DB_NAME" -c "SELECT 1" || exit 1\n\
+fi\n\
+\n\
+echo "🚀 Iniciando aplicación..."\n\
+exec /app/seminario-backend-rust\n\
+' > /app/start.sh && chmod +x /app/start.sh
 
-# Exponemos el puerto
 EXPOSE 8080
 
-# Comando para ejecutar la aplicación
 CMD ["/app/start.sh"]
