--- a/.github/workflows/seminario.yml
+++ b/.github/workflows/seminario.yml
@@ -4,6 +4,10 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+# # concurrency: 
+#   group: ci-${{ gitgub.ref }}  
+#   cancel-in-progress: true  
+
 env:
   CARGO_TERM_COLOR: always
   PGUSER: admin
@@ -13,6 +17,7 @@ env:
   PGPORT: 5432
 jobs:
   test:
+    name: Rust proyecto
     runs-on: ubuntu-latest
     services:
       postgres:
